Добавил тесты для Flight, поправил фабрику для Flight, поправил свагер дял обновления данных о перелетах
