# storage/api-docs/api-docs.json
@@ -1062,12 +1062,96 @@
                         "bearerAuth": []
                     }
                 ]
+            }
+        },
+        "/api/flights/{flight}": {
+            "get": {
+                "tags": [
+                    "Flights"
+                ],
+                "summary": "Получение информации о конкретном рейсе",
+                "parameters": [
+                    {
+                        "name": "flight",
+                        "in": "path",
+                        "description": "Код рейса",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "PG0405"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "allOf": [
+                                        {
+                                            "$ref": "#/components/schemas/FlightResource"
+                                        }
+                                    ]
+                                },
+                                "example": {
+                                    "data": [
+                                        {
+                                            "flight_no": "PG0405",
+                                            "scheduled_departure": "2016-09-13 05:35:00+00",
+                                            "scheduled_arrival": "2016-09-13 06:30:00+00",
+                                            "departure_airport": {
+                                                "code": "DME",
+                                                "name": "Домодедово",
+                                                "city": "Москва",
+                                                "longitude": "37.906111",
+                                                "latitude": "55.408611",
+                                                "timezone": "Europe/Moscow"
+                                            },
+                                            "arrival_airport": {
+                                                "code": "LED",
+                                                "name": "Пулково",
+                                                "city": "Санкт-Петербург",
+                                                "longitude": "30.262503",
+                                                "latitude": "59.800292",
+                                                "timezone": "Europe/Moscow"
+                                            },
+                                            "status": "Arrived",
+                                            "aircraft": {
+                                                "code": "321",
+                                                "model": "Airbus A321-200",
+                                                "range": 5600
+                                            },
+                                            "actual_departure": "2016-09-13 05:44:00+00",
+                                            "actual_arrival": "2016-09-13 06:39:00+00"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                }
             },
             "patch": {
                 "tags": [
                     "Flights"
                 ],
                 "summary": "Обновление информации о рейсе",
+                "parameters": [
+                    {
+                        "name": "flight",
+                        "in": "path",
+                        "description": "Id рейса",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "example": "1"
+                    }
+                ],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -1152,78 +1236,6 @@
                         "bearerAuth": []
                     }
                 ]
-            }
-        },
-        "/api/flights/{flight}": {
-            "get": {
-                "tags": [
-                    "Flights"
-                ],
-                "summary": "Получение информации о конкретном рейсе",
-                "parameters": [
-                    {
-                        "name": "flight",
-                        "in": "path",
-                        "description": "Код рейса",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "example": "PG0405"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Ok",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "allOf": [
-                                        {
-                                            "$ref": "#/components/schemas/FlightResource"
-                                        }
-                                    ]
-                                },
-                                "example": {
-                                    "data": [
-                                        {
-                                            "flight_no": "PG0405",
-                                            "scheduled_departure": "2016-09-13 05:35:00+00",
-                                            "scheduled_arrival": "2016-09-13 06:30:00+00",
-                                            "departure_airport": {
-                                                "code": "DME",
-                                                "name": "Домодедово",
-                                                "city": "Москва",
-                                                "longitude": "37.906111",
-                                                "latitude": "55.408611",
-                                                "timezone": "Europe/Moscow"
-                                            },
-                                            "arrival_airport": {
-                                                "code": "LED",
-                                                "name": "Пулково",
-                                                "city": "Санкт-Петербург",
-                                                "longitude": "30.262503",
-                                                "latitude": "59.800292",
-                                                "timezone": "Europe/Moscow"
-                                            },
-                                            "status": "Arrived",
-                                            "aircraft": {
-                                                "code": "321",
-                                                "model": "Airbus A321-200",
-                                                "range": 5600
-                                            },
-                                            "actual_departure": "2016-09-13 05:44:00+00",
-                                            "actual_arrival": "2016-09-13 06:39:00+00"
-                                        }
-                                    ]
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Not found"
-                    }
-                }
             }
         },
         "/api/flights/{flight}/tickets": {
